# TrueMiner-Android

./: GPU_PATCH_REPORT.md  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: sha256_miner.comp.spv
app/src/main/cpp/: CMakeLists.txt  native_miner.cpp
app/src/main/java/com/trueminer/: MainActivity.kt
app/src/main/java/com/trueminer/mining/: CPUMinerWorker.kt  GPUMinerWorker.kt  MiningMode.kt  NativeMiner.kt  NativeScanResult.kt  SHA256Miner.kt
app/src/main/java/com/trueminer/network/: MinerService.kt
app/src/main/java/com/trueminer/pool/: StratumConnection.kt
app/src/main/res/drawable/: bg_card.xml  bg_field.xml  bg_header.xml  bg_primary_button.xml  bg_save_button.xml  bg_status.xml  bg_stop_button.xml  ic_launcher_foreground.xml  ic_mining.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/shaders/: sha256_miner.comp
